# TrProbe

./: .gitignore  README.md  archieve.sh  build.gradle  gradle.properties  jcenter_publish.gradle  publish.gradle  settings.gradle  version.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_sogou_translate_jni_NativeUtils.h  dynamic_register_jni_demo.cpp  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml
blockcatcher/: build.gradle  p.config.gradle
blockcatcher/src/main/: AndroidManifest.xml
blockcatcher/src/main/res/layout/: layout_dialog.xml
blockcatcher/src/main/res/values/: strings.xml  styles.xml
breakpad-build/: .gitignore  build.gradle  p.config.gradle
breakpad-build/src/main/cpp/: CMakeLists.txt  breakpadcore.cpp  com_sogou_translate_breakpad_BreakPadCore.h  mylog.h
crashcatcher/: build.gradle  p.config.gradle
crashcatcher/src/main/: AndroidManifest.xml
crashcatcher/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
logClient/: build.gradle  gradle.properties  p.config.gradle
logClient/src/main/: AndroidManifest.xml
logService/: build.gradle  p.config.gradle
logService/src/main/: AndroidManifest.xml
store/: build.gradle  p.config.gradle
store/src/main/: AndroidManifest.xml
store/src/main/res/values/: strings.xml
tools/: 8439c979-cecf-41a6-25eaf89c-dbf9c03b.dmp  README.md
tools/linux/: crashinfo.txt  install_syms.sh
tools/linux/symbol/libbreakpad-core.so/57399AA1EE2607A34686D5DED7D43C310/: libbreakpad-core.so.sym
trprobe/: build.gradle  p.config.gradle
trprobe/src/main/: AndroidManifest.xml
trprobe/src/main/res/values/: strings.xml
(+94 files in other folders)
